fix: consider PyQt-sip version not sip version
for deprecated annotation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1169,6 +1169,7 @@ if (WITH_CORE AND WITH_BINDINGS)
   if(BUILD_WITH_QT6)
     find_package(PyQt6 REQUIRED)
     set(PYQT_FOUND ${PYQT6_FOUND})
+    set(PYQT_SIP_VERSION_STR ${PYQT6_SIP_VERSION_STR})
     set(PYQT_SIP_FLAGS ${PYQT6_SIP_FLAGS})
     set(PYQT_SIP_DIR ${PYQT6_SIP_DIR})
     set(PYQT_SIP_IMPORT ${PYQT6_SIP_IMPORT})
@@ -1177,6 +1178,7 @@ if (WITH_CORE AND WITH_BINDINGS)
   else()
     find_package(PyQt5 REQUIRED)
     set(PYQT_FOUND ${PYQT5_FOUND})
+    set(PYQT_SIP_VERSION_STR ${PYQT5_SIP_VERSION_STR})
     set(PYQT_SIP_FLAGS ${PYQT5_SIP_FLAGS})
     set(PYQT_SIP_DIR ${PYQT5_SIP_DIR})
     set(PYQT_SIP_IMPORT ${PYQT5_SIP_IMPORT})
